Fix missing margin from navbar

--- a/src/components/overview.css
+++ b/src/components/overview.css
@@ -15,6 +15,7 @@
   grid-column-gap: 10px;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 15px;
+  margin-top: 70px;
 }
 
 @media only screen and (max-width: 1140px) {
